# esparrier

./: .dockerignore  .gitignore  Cargo.toml  README.md  README.zh-cn.md  build.rs  config.json.example  gentable.c  partitions_ota.csv  partitions_single_app.csv
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
.helix/: languages.toml
.zed/: settings.json
docs/: app.js  esparrier.js  i18n.js  index.html  style.css
src/: ble.rs  clipboard.rs  config.rs  constants.rs  control.rs  esp_hal_smartled.rs  hid_report_writer.rs  lib.rs  ota.rs  running_state.rs  usb_actuator.rs  usb_report_writer.rs
src/barrier_client/: actuator.rs  client.rs  clipboard.rs  error.rs  mod.rs  packet.rs  packet_io.rs  packet_stream.rs
src/indicator/: dummy_indicator.rs  graphical_indicator.rs  led_indicator.rs  mod.rs  smartled_indicator.rs
src/indicator/graphical_indicator/: m5atom_s3.rs  m5atom_s3r.rs
src/synergy_hid/: ascii_2_hid.rs  descriptors.rs  hid.rs  keycodes.rs  mod.rs
webusb/: app.js  esparrier.js
