[package]
name = "esparrier"
version = "0.2.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.22.0", features = ["esp32s3"] }
esp-println = { version = "0.12.0", default-features = false, features = [
    "colors",
    "critical-section",
    "esp32s3",
    "log",
    "uart",
] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

esp-wifi = { version = "0.11.0", default-features = false, features = [
    "esp32s3",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-65536"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"

const_env = "0.1"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde-json-core = { version = "0.6.0" }
embedded-storage = "0.3.1"
esp-storage = { version = "0.4.0", features = ["esp32s3"] }
thiserror-no-std = "2.0.2"
fugit = "0.3.7"

embassy-futures = "0.1.1"
embassy-usb = { version = "0.3.0", features = [
    "max-handler-count-4",
    "max-interface-count-4",
] }
usbd-hid = "0.8.2"

cfg-if = "1.0.0"

embassy-sync = "0.6.1"
smart-leds-trait = { version = "0.3.0", optional = true }
smart-leds = { version = "0.4.0", optional = true }
async-debounce = { version = "0.1.1", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

embedded-hal-bus = { version = "0.2.0", optional = true }
embedded-graphics = { version = "0.8.1", optional = true }
mipidsi = { version = "0.8.0", optional = true }
display-interface-spi = { version = "0.5.0", optional = true }
tinygif = { version = "0.0.4", optional = true }


[features]
default = ["usb"]
clipboard = ["async-debounce", "embedded-hal-async"]
usb = []
indicator = []
led = ["indicator"]
smartled = ["indicator", "smart-leds", "smart-leds-trait"]
graphics = [
    "indicator",
    "clipboard",
    "embedded-hal-bus",
    "embedded-graphics",
    "mipidsi",
    "display-interface-spi",
    "tinygif",
]

# Features for the ESP32-S3 boards
m5atoms3-lite = ["smartled", "clipboard"]
m5atoms3 = ["graphics", "clipboard"]
xiao-esp32s3 = ["led"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
