[package]
name = "esparrier"
version = "0.5.1"
edition = "2021"
rust-version = "1.86"
authors = ["Chen Xu <windoze@0d0a.com>"]
description = "Esparrier is an ESP32-S3 based Barrier client."
homepage = "https://github.com/windoze/esparrier"
categories = ["embedded", "hardware-support"]
repository = "https://github.com/windoze/esparrier.git"
license = "MIT"
keywords = ["esparrier", "esp32s3", "usb", "hid", "embedded", "wifi", "barrier"]

[dependencies]
esp-backtrace = { version = "0.16.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.14.0", default-features = false, features = [
    "colors",
    "critical-section",
    "esp32s3",
    "log-04",
    "uart",
] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
esp-alloc = { version = "0.8.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.7.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

esp-wifi = { version = "0.14.1", features = ["esp32s3", "wifi", "log-04"] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-tcp",
] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-65536"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"

const_env = "0.1"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde-json-core = { version = "0.6.0" }
embedded-storage = "0.3.1"
esp-storage = { version = "0.6.0", features = ["esp32s3"] }
thiserror-no-std = "2.0.2"
fugit = "0.3.7"

embassy-futures = "0.1.1"
embassy-usb = { version = "0.4.0", features = [
    "max-handler-count-4",
    "max-interface-count-4",
] }
embassy-usb-driver = "0.1.0"
usbd-hid = "0.8.2"

cfg-if = "1.0.1"
const-str = "0.6.2"

embassy-sync = "0.7.0"
smart-leds-trait = { version = "0.3.0", optional = true }
smart-leds = { version = "0.4.0", optional = true }
async-debounce = { version = "0.2.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

embedded-hal-bus = { version = "0.3.0", optional = true }
embedded-graphics = { version = "0.8.1", optional = true }
mipidsi = { version = "0.9.0", optional = true }
display-interface-spi = { version = "0.5.0", optional = true }
tinygif = { version = "0.0.4", optional = true }


[features]
default = ["webusb"]
clipboard = ["async-debounce", "embedded-hal-async"]
usb = []
indicator = []
led = ["indicator"]
smartled = ["indicator", "smart-leds", "smart-leds-trait"]
graphics = [
    "indicator",
    "embedded-hal-bus",
    "embedded-graphics",
    "mipidsi",
    "display-interface-spi",
    "tinygif",
]
webusb = ["usb"]

# Features for the ESP32-S3 boards
generic = []
m5atoms3-lite = ["smartled", "clipboard"]
m5atoms3 = ["graphics", "clipboard"]
m5atoms3r = ["graphics", "clipboard"]
xiao-esp32s3 = ["led"]
devkitc-1_0 = ["smartled"]
devkitc-1_1 = ["smartled"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
